apps/market-data/sin/ui-apps/pnl-dashboard/deployment-front.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pnl-dashboard
spec:
  selector:
    matchLabels:
      app: pnl-dashboard
  replicas: 1
  template:
    metadata:
      labels:
        app: pnl-dashboard
    spec:
      containers:
      - name: pnl-dashboard
        image: ghcr.io/alphalab-hq/pnl-dashboard:20210729_225224Z
        ports:
        - containerPort: 3003
      tolerations:
        - key: node/destiny
          operator: 'Equal'
          value: 'alc-ui'
          effect: 'NoSchedule'
      nodeSelector:
        node/destiny: alc-ui
      imagePullSecrets:
      - name: ghcr-creds
