apps/market-data/sin/ui-apps/pnl-dashboard/deployment-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pnl-dashboard-service
spec:
  selector:
    matchLabels:
      app: pnl-dashboard-service
  replicas: 1
  template:
    metadata:
      labels:
        app: pnl-dashboard-service
    spec:
      containers:
      - name: pnl-dashboard-service
        image: ghcr.io/alphalab-hq/pnl-dashboard-service:20210727_162610Z
        ports:
        - containerPort: 3003
      imagePullSecrets:
      - name: ghcr-creds
