apps/market-data/sin/ui-apps/pnl-dashboard/svc-front.yaml
apiVersion: v1
kind: Service
metadata:
  name: pnl-dashboard
spec:
  selector:
    app: pnl-dashboard
  ports:
    - protocol: TCP
      port: 3001
