apps/market-data/sin/ui-apps/pnl-dashboard/svc-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pnl-dashboard-service
spec:
  selector:
    app: pnl-dashboard-service
  ports:
    - protocol: TCP
      port: 3003
