apps/market-data/sin/ui-apps/pnl-dashboard/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: pnl-dashboard-service-stripprefix
spec:
  stripPrefix:
    prefixes:
      - /pnl-dashboard/ws
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: pnl-dashboard-stripprefix
spec:
  stripPrefix:
    prefixes:
      - /pnl-dashboard
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: pnl-dashboard-service
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`tools.alphalab.cc`) && PathPrefix(`/pnl-dashboard/ws`)
      kind: Rule
      middlewares:
        - name: pnl-dashboard-service-stripprefix
      services:
        - name: pnl-dashboard-service
          port: 3003
    - match: Host(`tools.alphalab.cc`) && PathPrefix(`/pnl-dashboard`)
      kind: Rule
      middlewares:
        - name: pnl-dashboard-stripprefix
      services:
        - name: pnl-dashboard
          port: 3001
  tls:
    - hosts:
        - tools.alphalab.cc
      secretName: tools.alphalab.cc-tls
